# STM32-FC

./: .gitignore  platformio.ini
Data/: acc_calib.py  acc_calib_1.txt  acc_calib_10.txt  acc_calib_11.txt  acc_calib_12.txt  acc_calib_13.txt  acc_calib_14.txt  acc_calib_15.txt  acc_calib_16.txt  acc_calib_17.txt  acc_calib_18.txt  acc_calib_19.txt  acc_calib_2.txt  acc_calib_20.txt  acc_calib_21.txt  acc_calib_22.txt  acc_calib_23.txt  acc_calib_24.txt  acc_calib_25.txt  acc_calib_26.txt  acc_calib_27.txt  acc_calib_28.txt  acc_calib_29.txt  acc_calib_3.txt  acc_calib_30.txt  acc_calib_31.txt  acc_calib_32.txt  acc_calib_4.txt  acc_calib_5.txt  acc_calib_6.txt  acc_calib_7.txt  acc_calib_8.txt  acc_calib_9.txt  gyro_calib.py  gyro_calib.txt  mag_calib.py  mag_calib.txt  stddev.py  stddev.txt
Document/: Doxyfile  Protocol.xlsx
Firmware/: .cproject  .mxproject  .project  STM32-FC.ioc  extra_script.py  platformio.ini  project.yml
Firmware/Inc/: tim.h
GroundControl/: CMakeLists.txt
GroundControl/Inc/: command_manager.hpp  command_tab.hpp  main_window.hpp  packet_parser.hpp  plot_manager.hpp  plot_tab.hpp  plotting_tab.hpp  port_manager.hpp  port_setting.hpp  port_tab.hpp  protocol.hpp  sample_counter.hpp
GroundControl/Src/: command_manager.cpp  command_tab.cpp  command_tab.ui  main.cpp  main_window.cpp  main_window.ui  packet_parser.cpp  plot_manager.cpp  plot_tab.cpp  plot_tab.ui  plotting_tab.cpp  plotting_tab.ui  port_manager.cpp  port_setting.cpp  port_setting.ui  port_tab.cpp  port_tab.ui  protocol.cpp  sample_counter.cpp
boards/: stm32-fc.json
(+116 files in other folders)
